RESOLVED FIXED209050
Safari doesn't insert mDNS candidates to SDP
https://bugs.webkit.org/show_bug.cgi?id=209050
Summary Safari doesn't insert mDNS candidates to SDP
olsviate
Reported 2020-03-13 05:52:34 PDT
jsfiddle is provided, run script and deny media permissions in prompt. check gathered candidates and final offer in log https://jsfiddle.net/qexr68k5/
Attachments
Patch (5.50 KB, patch)
2020-03-16 07:02 PDT, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2020-03-13 09:14:14 PDT
youenn fablet
Comment 2 2020-03-16 07:02:11 PDT
WebKit Commit Bot
Comment 3 2020-03-17 03:50:37 PDT
Comment on attachment 393652 [details] Patch Clearing flags on attachment: 393652 Committed r258545: <https://trac.webkit.org/changeset/258545>
WebKit Commit Bot
Comment 4 2020-03-17 03:50:39 PDT
All reviewed patches have been landed. Closing bug.
youenn fablet
Comment 5 2021-10-29 01:03:11 PDT
*** Bug 198887 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.