Safari doesn't insert mDNS candidates to SDP https://bugs.webkit.org/show_bug.cgi?id=209050 <rdar://problem/60419936>

Reviewed by Eric Carlson.

Source/WebCore:

Instead of removing host candidate lines in SDP, replace the host IP address by the corresponding mDNS name.
Covered by updated test.

* Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::extractIPAddress):
(WebCore::PeerConnectionBackend::filterSDP const):
(WebCore::PeerConnectionBackend::finishedRegisteringMDNSName):
* Modules/mediastream/PeerConnectionBackend.h:

LayoutTests:

* webrtc/datachannel/mdns-ice-candidates.html:


Canonical link: https://commits.webkit.org/222083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258545 268f45cc-cd09-0410-ab3c-d52691b4dbfc